# f_Brain

./: .env  README.md  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: ci-cd.yml
client/: Dockerfile  package.json
client/src/: App.jsx
client/src/components/: IPConverter.jsx
proxy/: default.conf  default.conf:Zone.Identifier
server/: Dockerfile  manage.py  pyproject.toml
server/apps/ip_translator/: apps.py  models.py  views.py
server/converter/: models.py  urls.py  views.py
server/converter/migrations/: 0001_initial.py
server/ip_converter/: asgi.py  settings.py  urls.py  wsgi.py
server/server_config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
