[project]
name = "f-brain"
version = "0.1.0"
description = ""
authors = [
    {name = "Malika03-ul",email = "ndjonguetiadeumalikalucresse@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "django-prometheus (>=2.3.1,<3.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
