[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Malika03-ul <ndjonguetiadeumalikalucresse@gmail.com>"]
readme = "README.md"
packages = [{ include = "server_config" }]
python = ">=3.11,<4.0"

[tool.poetry.dependencies]
django = "^5.0"
celery = "^5.3"
django-prometheus = "^2.3.1"
django-celery-results = "^2.5"
django-celery-beat = "^2.5"
psycopg2-binary = "^2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

